# real_summary

./: LICENSE  README.md
real_summary/: LICENSE  __init__.py  __main__.py  __version__.py  pyproject.toml  real_summary.py
real_summary/real_summary/: LICENSE  tox.ini
